--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lite-server": "^2.6.1"
   },
   "dependencies": {
-    "bootstrap": "^5.1.3"
+    "bootstrap": "^5.1.3",
+    "typed.js": "^2.0.12"
   }
 }
