--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "lite-server": "^2.6.1"
   },
   "dependencies": {
-    "bootstrap": "^5.1.3",
-    "typed.js": "^2.0.12"
+    "bootstrap": "^5.1.3"
   }
 }
